--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,6 @@ variables:
   DOCKER_HOST: "tcp://docker:2375"
   DOCKER_DRIVER: overlay2
   DOCKER_TLS_CERTDIR: ""
-  ITEST_FAIL_FACTOR: "8"
 
 include:
   - local: '/ci/submitter.yml'
@@ -21,6 +20,7 @@ stages:
   - build-test
   - mongo-nfs-itest
   - mongo-fire-itest
+  - mongo-fire-caos-itest
   - auto-deploy-dev-bio-commandline
   - auto-deploy-beta-bio-commandline
   - auto-deploy-prod-bio-commandline
@@ -78,9 +78,16 @@ build-test:
 mongo-nfs-itest:
   needs: ["build-test"]
   stage: mongo-nfs-itest
-  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mongo -PenableFire=false --rerun-tasks --info
+  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mongo -PenableFire=false --rerun-tasks --stacktrace
 
 mongo-fire-itest:
   needs: ["build-test"]
   stage: mongo-fire-itest
-  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mongo -PenableFire=true --rerun-tasks --info
+  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mongo -PenableFire=true --rerun-tasks --stacktrace
+
+mongo-fire-caos-itest:
+  needs: [ "build-test" ]
+  stage: mongo-fire-caos-itest
+  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mongo -PenableFire=true --rerun-tasks --stacktrace
+  variables:
+    ITEST_FAIL_FACTOR: "8"
