--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -68,6 +68,11 @@ app:
     username: # FIRE user
     password: # FIRE password
     version: v1.1
+    retry:
+      maxAttempts: 20
+      initialInterval: 100
+      multiplier: 2.0
+      maxInterval: 120
   security:
     captchaKey: # Captcha validation token
     checkCaptcha: false
