--- a/docs/api/submissions/fileList/ValidateFileList.yaml
+++ b/docs/api/submissions/fileList/ValidateFileList.yaml
@@ -4,7 +4,8 @@ post:
     Validate that the file list with the given name:
     * Exists in the user folder
     * Has the valid extension and format
-    * All the referenced files exist
+    * All the referenced files exist in either the user folder, the submission folder if given or in the EBI internal
+      storage
 
   tags:
     - File List
@@ -26,6 +27,14 @@ post:
               fileListName:
                 description: Path of the file list to be validated
                 required: true
+                type: string
+              rootPath:
+                description: Base path to search for the files in the user folder
+                required: false
+                type: string
+              previousVersionAccNo:
+                description: The accNo for the previous version to include its files in the search
+                required: false
                 type: string
 
     responses:
