Pivotal ID # 182855983: Move BioAdmin HL
Update the BioAdmin URL to point to the HL servers

--- a/submission/submission-handlers/src/main/resources/application.yml
+++ b/submission/submission-handlers/src/main/resources/application.yml
@@ -1,4 +1,10 @@
 spring:
+  boot:
+    admin:
+      client:
+        url: http://biostudies-prod.ebi.ac.uk:8590
+        enabled: false
+
   datasource:
     url: # Database connection URL
     username:
