--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   boot:
     admin:
       client:
-        url: http://biostudy-prod.ebi.ac.uk:8590
+        url: http://biostudies-prod.ebi.ac.uk:8590
         enabled: false
 
   data:
