--- a/submission/submission-handlers/src/main/resources/application.yml
+++ b/submission/submission-handlers/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  boot:
+    admin:
+      client:
+        enabled: false
+
   datasource:
     url: # Database connection URL
     username:
