--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -79,7 +79,7 @@ app:
     filesDirPath: # Absolute path to the folder to be used for the user/groups files
     magicDirPath: #  Absolute path to create user magic folder for dropbox simple access
     environment: # Current application execution environment
-    requireActivation: # Indicates whether or not, new user need activation before being used
+    requireActivation: # Indicates whether a new user need activation before being used
     instanceKeys:
       dev: # Instance key for the submission tool DEV environment
       beta: # Instance key for the submission tool BETA environment
@@ -91,5 +91,3 @@ app:
     migration-package: ac.uk.ebi.biostd.persistence.doc.migrations
   validator:
     euToxRiskValidationApi: # EU-ToxRisk validation API
-  featureFlags:
-    tsvPagetabExtension: false
