--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,16 +78,16 @@ build-test:
 mongo-nfs-itest:
   needs: ["build-test"]
   stage: mongo-nfs-itest
-  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mongo -PenableFire=false --rerun-tasks --stacktrace
+  script: gradle clean :submission:submission-webapp:itest -PenableFire=false --rerun-tasks --stacktrace
 
 mongo-fire-itest:
   needs: ["build-test"]
   stage: mongo-fire-itest
-  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mongo -PenableFire=true --rerun-tasks --stacktrace
+  script: gradle clean :submission:submission-webapp:itest -PenableFire=true --rerun-tasks --stacktrace
 
 mongo-fire-caos-itest:
   needs: [ "build-test" ]
   stage: mongo-fire-caos-itest
-  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mongo -PenableFire=true --rerun-tasks --stacktrace
+  script: gradle clean :submission:submission-webapp:itest -PenableFire=true --rerun-tasks --stacktrace
   variables:
     ITEST_FAIL_FACTOR: "8"
