--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -56,6 +56,8 @@ logging:
     name: logs/application_logs.txt
 
 app:
+  consumers: 5 # number of processing queue consumers.
+  maxConsumers: 15 # Max number of processing queue consumers.
   submissionPath: # Absolute path to the folder to be used as submission storage
   ftpPath: # Absolute path to the folder to be used ftp hardlinks
   tempDirPath: # Absolute path of the temp folder to store files
