--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -58,6 +58,8 @@ logging:
       max-history: 7
 
 app:
+  consumers: 10 # number of processing queue consumers.
+  maxConsumers: 15 # Max number of processing queue consumers.
   submissionPath: # Absolute path to the folder to be used as submission storage
   ftpPath: # Absolute path to the folder to be used ftp hardlinks
   tempDirPath: # Absolute path of the temp folder to store files
