--- a/docs/api/stats/operations/IncrementStats.yaml
+++ b/docs/api/stats/operations/IncrementStats.yaml
@@ -18,7 +18,7 @@ post:
 
     - in: path
       name: type
-      description: "Stats type. Accepted values: VIEWS"
+      description: "Stats type. Accepted values: FILES_SIZE, VIEWS"
       required: true
       type: string
 
