Pivotal # 183393317: Separate PMC Export/Import Schedule
- Add separated properties for the PMC import/export tasks
- Remove unnecessary JPA dependency in the exporter task

--- a/scheduler/scheduler/src/main/resources/application.yml
+++ b/scheduler/scheduler/src/main/resources/application.yml
@@ -3,10 +3,11 @@ app:
   notificationsUrl: # Slack notifications URL
 
   daily-scheduling:
-    pmc: # Indicates whether or not the PMC related tasks should be daily triggered
-    notifier: # Indicates whether or not the Submission Release Notifier should be daily triggered
-    releaser: # Indicates whether or not the Submission Releaser should be daily triggered
-    exporter: # Indicates whether or not the Exporter should be daily triggered
+    pmc-import: # Indicates whether the PMC import pipeline be daily triggered
+    pmc-export: # Indicates whether the PMC links export should be daily triggered
+    notifier: # Indicates whether the Submission Release Notifier should be daily triggered
+    releaser: # Indicates whether the Submission Releaser should be daily triggered
+    exporter: # Indicates whether the Exporter should be daily triggered
 
   ssh:
     sshKey: # ssh key path.
