--- a/ci/submission-releaser.yml
+++ b/ci/submission-releaser.yml
@@ -1,7 +1,7 @@
 .deploy-prod-releaser-task:
   dependencies:
     - build-test
-  script: gradle :scheduler:tasks:submission-releaser-task:bootJar updateReleaserArtifact -Penv=prod -PdeployPath=$APPS_PATH/scheduler/prod/apps
+  script: gradle :scheduler:tasks:submission-releaser-task:bootJar updateReleaserArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/prod/apps
 
 auto-deploy-prod-releaser-task:
   extends: .deploy-prod-releaser-task
@@ -15,14 +15,14 @@ deploy-dev-releaser-task:
   when: manual
   dependencies:
     - build-test
-  script: gradle :scheduler:tasks:submission-releaser-task:bootJar updateReleaserArtifact -Penv=dev -PdeployPath=$APPS_PATH/scheduler/dev/apps
+  script: gradle :scheduler:tasks:submission-releaser-task:bootJar updateReleaserArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
 
 deploy-beta-releaser-task:
   stage: deploy-beta-releaser-task
   when: manual
   dependencies:
     - build-test
-  script: gradle :scheduler:tasks:submission-releaser-task:bootJar updateReleaserArtifact -Penv=beta -PdeployPath=$APPS_PATH/scheduler/beta/apps
+  script: gradle :scheduler:tasks:submission-releaser-task:bootJar updateReleaserArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/beta/apps
 
 deploy-prod-releaser-task:
   extends: .deploy-prod-releaser-task
