--- a/deploy.gradle
+++ b/deploy.gradle
@@ -4,7 +4,7 @@ remotes {
         user = System.getenv("BS_USER")
     }
 
-    devCodon {
+    codon {
         host = System.getenv("CODON_SERVER")
         user = System.getenv("BS_USER")
     }
@@ -14,18 +14,8 @@ remotes {
         user = System.getenv("BS_USER")
     }
 
-    betaCodon {
-        host = System.getenv("CODON_SERVER")
-        user = System.getenv("BS_USER")
-    }
-
     prod {
         host = System.getenv("PROD_SERVER")
-        user = System.getenv("BS_USER")
-    }
-
-    prodCodon {
-        host = System.getenv("CODON_SERVER")
         user = System.getenv("BS_USER")
     }
 
