--- a/deploy.gradle
+++ b/deploy.gradle
@@ -4,6 +4,11 @@ remotes {
         user = System.getenv("BS_USER")
     }
 
+    codon {
+        host = System.getenv("CODON_SERVER")
+        user = System.getenv("BS_USER")
+    }
+
     beta {
         host = System.getenv("BETA_SERVER")
         user = System.getenv("BS_USER")
