--- a/docs/api/security/ChangePassword.yaml
+++ b/docs/api/security/ChangePassword.yaml
@@ -10,18 +10,39 @@ post:
       application/json:
         schema:
           type: object
+          required:
+            - activationKey
+            - password
           properties:
             activationKey:
               description: User activation key
               example: "the-activation-key"
-              required: true
               type: string
             password:
               description: New user password
               example: 7891011
-              required: true
               type: string
 
   responses:
     200:
       description: OK
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              id:
+                type: number
+                example: 123123
+              email:
+                type: string
+                example: "user@test.org"
+              secretKey:
+                type: string
+                example: "user"
+              fullName:
+                type: string
+                example: "Jhon Doe"
+              notificationsEnabled:
+                type: boolean
+                example: true
