--- a/docs/api/security/ResetPassword.yaml
+++ b/docs/api/security/ResetPassword.yaml
@@ -10,26 +10,26 @@ post:
       application/json:
         schema:
           type: object
+          required:
+            - email
+            - instanceKey
+            - path
           properties:
             email:
               description: User email
               example: "user@test.org"
-              required: true
               type: string
             instanceKey:
               description: Instance key that should process the password reset
               example: "the-instance-key"
-              required: true
               type: string
             path:
               description: The path to redirect the user in the UI
               example: "/users/password_reset"
-              required: true
               type: string
             recaptcha2-response:
               description: Recaptcha response
               example: "recaptcha-response"
-              required: false
               type: string
 
   responses:
