--- a/docs/api/BioStudiesPublicAPI.yaml
+++ b/docs/api/BioStudiesPublicAPI.yaml
@@ -1,12 +1,12 @@
 openapi: 3.0.0
 info:
   title: BioStudies API
-  description: Description of the endpoints that can be used to interact programatically with the BioStudies database
-  version: 1.0.0
+  description: Endpoints to interact programatically with the BioStudies database
+  version: 1.0.1
 servers:
-  - url: 'http://biostudy-prod.ebi.ac.uk:8788'
+  - url: 'http://biostudies-prod.ebi.ac.uk:8788'
     description: PROD
-  - url: 'http://biostudy-dev.ebi.ac.uk:8788'
+  - url: 'http://biostudies-beta.ebi.ac.uk:8788'
     description: BETA
 
 tags:
@@ -37,9 +37,9 @@ paths:
   /groups:
     $ref: 'groups/UserGroups.yaml'
 
-  /files/groups/{groupName}/{path}:
+  /files/groups/{groupName}/<unknown>:
     $ref: 'files/GroupFiles.yaml'
-  /folder/groups/{groupName}/{path}:
+  /folder/groups/{groupName}/<unknown>:
     $ref: 'files/GroupFolder.yaml'
 
   /files/user/{path}:
