--- a/docs/api/files/GroupFiles.yaml
+++ b/docs/api/files/GroupFiles.yaml
@@ -1,6 +1,8 @@
 get:
   summary: List Group Files
-  description: Lists the files for the given group in the given path.
+  description: |
+    Lists the files for the given group in the given path.
+    * To take into account: what is written after the groupName in the url is taken as the path where the action will be performed. The path is not required.
 
   tags:
     - Group Files
@@ -10,14 +12,14 @@ get:
       name: X-SESSION-TOKEN
       description: User authentication token
       required: true
+      schema:
+        type: string
     - in: path
       name: groupName
       description: The name of the group to list the files.
       required: true
-    - in: path
-      name: path
-      description: The path in which files will be listed. If empty, the root group directory will be listed.
-      required: false
+      schema:
+        type: string
 
   responses:
     200:
@@ -44,9 +46,12 @@ get:
     401:
       description: Caused by an invalid X-SESSION-TOKEN
 
+
 post:
   summary: Upload Group File
-  description: Upload a file to the group directory in the given path.
+  description: |
+    Upload a file to the group directory in the given path.
+    * To take into account: what is written after the groupName in the url is taken as the path where the action will be performed. The path is not required.
 
   tags:
     - Group Files
@@ -56,14 +61,14 @@ post:
       name: X-SESSION-TOKEN
       description: User authentication token
       required: true
+      schema:
+        type: string
     - in: path
       name: groupName
       description: The name of the group to upload the files.
       required: true
-    - in: path
-      name: path
-      description: The path where the file will be uploaded inside the group folder.
-      required: false
+      schema:
+        type: string
 
   requestBody:
     required: true
@@ -71,13 +76,14 @@ post:
       multipart/form-data:
         schema:
           type: object
+          required:
+            - files
           properties:
             files:
               type: array
               items:
                 description: Files to be uploaded
                 example: file1.txt
-                required: true
                 type: string
                 format: binary
 
@@ -88,8 +94,10 @@ post:
       description: Caused by an invalid X-SESSION-TOKEN
 
 delete:
-  summary: Delete Group File
-  description: Delete the given file contained in the given path and with the given name.
+  summary: Delete File in Group
+  description: |
+    Delete the given file contained in the given path and with the given name.
+    * To take into account: what is written after the groupName in the url is taken as the path where the action will be performed. The path is not required.
 
   tags:
     - Group Files
@@ -99,14 +107,19 @@ delete:
       name: X-SESSION-TOKEN
       description: User authentication token
       required: true
+      schema:
+        type: string
     - in: path
       name: groupName
       description: The name of the group which holds the file to be deleted.
       required: true
-    - in: path
-      name: path
-      description: The path of the directory that contains the file to be deleted.
-      required: true
+      schema:
+        type: string
+    - in: query
+      name: fileName
+      description: File to be deleted
+      schema:
+        type: string
 
   requestBody:
     required: true
@@ -114,11 +127,12 @@ delete:
       application/x-www-form-urlencoded:
         schema:
           type: object
+          required:
+            - fileName
           properties:
             fileName:
               description: Name of the file to be deleted
               example: file1.txt
-              required: true
               type: string
 
   responses:
