--- a/docs/api/security/Login.yaml
+++ b/docs/api/security/Login.yaml
@@ -10,77 +10,50 @@ post:
       application/json:
         schema:
           type: object
-          properties:
-            login:
-              description: User login or email
-              example: "user@test.org"
-              required: true
-              type: string
-            password:
-              description: User password
-              example: 123456
-              required: true
-              type: string
+          example:
+            login: user@test.org
+            password: carpediem
+
+  parameters:
+    - name: Content-Type
+      in: header
+      schema:
+        type: string
+      example: application/json
+    - name: Accept
+      in: header
+      schema:
+        type: string
+      example: application/json
 
   responses:
-    200:
+    '200':
       description: OK
       content:
         application/json:
           schema:
             type: object
-            properties:
-              sessid:
-                type: string
-                example: "<auth-token>"
-              email:
-                type: string
-                example: "user@test.org"
-              username:
-                type: string
-                example: "user"
-              secret:
-                type: string
-                example: "the-user-secret"
-              fullname:
-                type: string
-                example: "Test User"
-              superuser:
-                type: boolean
-                example: true
-              allow:
-                type: array
-                items:
-                  type: string
-                  example: "Public"
-              deny:
-                type: array
-                default: []
-              aux:
-                type: object
-                properties:
-                  orcid:
-                    type: string
-                    example: "<user orcid>"
-    400:
+          example:
+            sessid: <auth-token>
+            email: admin_user@ebi.ac.uk
+            username: admin_user
+            secret: 69/214a2f-f80b-4f33-86b7-26d3bd0453aa-a4
+            fullname: Admin User
+            superuser: true
+            orcid: ''
+            allow:
+              - admin_user@ebi.ac.uk
+              - Public
+            deny: []
+    '401':
       description: Unauthorized
       content:
         application/json:
           schema:
             type: object
-            properties:
-              status:
-                type: string
-                example: "FAIL"
-              log:
-                type: object
-                properties:
-                  level:
-                    type: string
-                    example: "ERROR"
-                  message:
-                    type: string
-                    example: "Invalid email address or password."
-                  subnodes:
-                    type: array
-                    default: []
+          example:
+            status: FAIL
+            log:
+              level: ERROR
+              message: Could not find user with the provided email 'user@test.org'.
+              subnodes: []
