--- a/docs/api/security/UserInfo.yaml
+++ b/docs/api/security/UserInfo.yaml
@@ -6,50 +6,30 @@ get:
     - Security
 
   parameters:
-    - in: header
-      name: X-SESSION-TOKEN
-      description: User authentication token
-      required: true
+    - name: X-SESSION-TOKEN
+      in: header
+      schema:
+        type: string
+      description: (Required) User authentication token
+      example: <auth-token>
 
   responses:
-    200:
+    '200':
       description: OK
+
       content:
         application/json:
           schema:
             type: object
-            properties:
-              sessid:
-                type: string
-                example: "<auth-token>"
-              email:
-                type: string
-                example: "user@test.org"
-              username:
-                type: string
-                example: "user"
-              secret:
-                type: string
-                example: "the-user-secret"
-              fullname:
-                type: string
-                example: "Test User"
-              superuser:
-                type: boolean
-                example: true
-              allow:
-                type: array
-                items:
-                  type: string
-                  example: "Public"
-              deny:
-                type: array
-                default: [ ]
-              aux:
-                type: object
-                properties:
-                  orcid:
-                    type: string
-                    example: "<user orcid>"
-    500:
-      description: Internal Server Error
+          example:
+            sessid: <auth-token>
+            email: admin_user@ebi.ac.uk
+            username: admin_user
+            secret: 69/214a2f-f80b-4f33-86b7-26d3bd0453aa-a4
+            fullname: Admin User
+            superuser: true
+            orcid: ''
+            allow:
+              - admin_user@ebi.ac.uk
+              - Public
+            deny: []
