--- a/docs/api/submissions/operations/DeleteSubmissions.yaml
+++ b/docs/api/submissions/operations/DeleteSubmissions.yaml
@@ -1,27 +1,28 @@
-delete:
-  summary: Delete submissions
-  description: Deletes the submissions with the accession numbers in the given list.
+summary: Delete submissions
+description: Deletes the submissions with the accession numbers in the given list.
 
-  tags:
-    - Submissions
+tags:
+  - Submissions
 
-  parameters:
-    - in: header
-      name: X-SESSION-TOKEN
-      description: User authentication token
-      required: true
-      type: String
+parameters:
+  - in: header
+    name: X-SESSION-TOKEN
+    description: User authentication token
+    required: true
+    schema:
+      type: string
 
-    - in: query
-        name: submissions
-        description: Comma separated list with accession numbers of the submissions to be deleted.
-        required: true
-        type: string
+  - in: query
+    name: submissions
+    description: Comma separated list with accession numbers of the submissions to be deleted.
+    required: true
+    schema:
+      type: string
 
-  responses:
-    200:
-      description: OK
-    401:
-      description: Caused by an invalid X-SESSION-TOKEN
-    500:
-      description: The user doesn't have privileges to delete the submissions
+responses:
+  200:
+    description: OK
+  401:
+    description: Caused by an invalid X-SESSION-TOKEN
+  500:
+    description: The user doesn't have privileges to delete the submissions
