--- a/docs/api/submissions/search/SearchSubmissions.yaml
+++ b/docs/api/submissions/search/SearchSubmissions.yaml
@@ -9,55 +9,65 @@ parameters:
     name: X-SESSION-TOKEN
     description: User authentication token
     required: true
-    type: string
+    schema:
+      type: string
 
   - in: query
     name: offset
     description: Page number
-    required: true
-    type: number
+    required: false
+    schema:
+      type: number
   - in: query
     name: limit
     description: Limit of the search result
-    required: true
-    type: number
+    required: false
+    schema:
+      type: number
   - in: query
     name: accNo
     description: Search for submissions with the given accession number.
     required: false
-    type: string
+    schema:
+      type: string
   - in: query
     name: version
     description: Search for submissions with the given version.
     required: false
-    type: string
+    schema:
+      type: string
   - in: query
     name: type
     description: Search for submissions with the given type. It should be either FILE or PAGE_TAB.
     required: false
-    type: string
+    schema:
+      type: string
   - in: query
     name: rTimeFrom
     description: Search for submissions which release time is past the given date. The date should be in ISO format.
     example: "2019-09-24T09:41:44.000Z"
     required: false
-    type: string
+    schema:
+      type: string
   - in: query
     name: rTimeTo
     description: Search for submissions which release time is before the given date. The date should be in ISO format.
     example: "2019-09-24T09:41:44.000Z"
     required: false
-    type: string
+    schema:
+      type: string
   - in: query
     name: keywords
     description: Search for submissions which title contains the given keyword.
     required: false
-    type: string
+    schema:
+      type: string
   - in: query
     name: released
     description: Search for submissions based on their visibility.  True for public submissions, false for private.
     required: false
-    type: boolean
+    schema:
+      type: boolean
 
 responses:
   200:
