--- a/submission/submission-handlers/src/main/resources/application.yml
+++ b/submission/submission-handlers/src/main/resources/application.yml
@@ -26,6 +26,7 @@ app:
   notifications:
     smtp: smtp.ebi.ac.uk
     uiUrl: # The BioStudies UI url
+    stUrl: # The BioStudies ST url
     slackUrl: # Slack notifications URL
     rt:
       host: # RT server host
