Pivotal ID # 183817421: Migrate DEV To HL
- Specify terminal stdout and stderr output streams to avoid the terminal being clogged
- Remove the "sh" command from the command execution since it's not required in standard linux shell

--- a/deploy.gradle
+++ b/deploy.gradle
@@ -141,7 +141,7 @@ task deploy {
                 }
 
                 execute "chmod +x $deployPath/update.sh"
-                execute "sh $deployPath/update.sh"
+                execute "$deployPath/update.sh"
             }
         }
     }
