--- a/docs/api/submissions/operations/DirectSubmit.yaml
+++ b/docs/api/submissions/operations/DirectSubmit.yaml
@@ -12,11 +12,25 @@ post:
     - Submissions
 
   parameters:
-    - in: header
-      name: X-SESSION-TOKEN
-      description: User authentication token
-      required: true
-      type: string
+    - name: Content-Type
+      in: header
+      schema:
+        type: string
+        enum:
+          - multipart/form-data
+    - name: Submission_Type
+      in: header
+      schema:
+        type: string
+        enum:
+          - application/json
+          - text/plain
+          - text/xml
+    - name: X-Session-Token
+      in: header
+      schema:
+        type: string
+      example: <auth-token>
 
     - in: query
       name: onBehalf
@@ -24,57 +38,84 @@ post:
         In case the submission is performed on behalf of another user, the submission owner's email should be placed in
         this parameter.
       required: false
-      type: string
+      schema:
+        type: string
+
     - in: query
-      name: register
+      name: onBehalfRequest
       description:
-        In case the submission is performed on behalf of another user, this parameter indicates whether a new user should
-        be registered in case the given owner doesn't exist.
-      required: false
-      type: string
+        This param is used if the submission is performed on behalf of another user. It's not required.
+      schema:
+        type: object
+        required:
+          - userEmail
+        properties:
+          userEmail:
+            type: string
+            description:
+              The submission owner's email should be placed in this parameter.
+          userName:
+            type: string
+          register:
+            type: boolean
+            description:
+              This parameter indicates whether a new user should be registered in case the given owner doesn't exist.
+
     - in: query
-      name: name
-      description: Name that will be used to create the new user in case the "sse" parameter is set to true.
-      required: false
-      type: string
+      name: preferredSources
+      schema:
+        type: array
+        items:
+          type: string
+          example:
+            - FIRE
+            - SUBMISSION
+            - USER_SPACE
+    - in: query
+      name: attributes
+      schema:
+        type: array
+        items:
+          type: object
+          required:
+            - name
+          properties:
+            name:
+              type: string
+            value:
+              type: string
+    - in: query
+      name: storageMode
+      schema:
+        type: string
+        enum:
+          - FIRE
+          - NFS
 
   requestBody:
     required: true
     content:
-      application/x-www-form-urlencoded:
-        schema:
-          type: object
-          properties:
-            attributes:
-              description:
-                List of attributes that allow overriding any value at the submission level in the submitted page tab. The
-                values should be passed in the key=value format i.e. title=new title
-              required: false
-              type: string
       multipart/form-data:
         schema:
           type: object
+          required:
+            - submission
+            - fileMode
           properties:
             submission:
-              description: File containing the submission page tab in the chosen format
-              example: submission.tsv
-              required: true
               type: string
               format: binary
-            files:
+            fileMode:
+              type: string
+              example: COPY
+            Files:
               type: array
               items:
-                description: Files to be attached to the submission
-                example: file1.txt
-                required: false
                 type: string
                 format: binary
 
   responses:
     200:
-      description: OK
-      content:
-        application/json:
-          $ref: '../model/BasicSubmission.yaml'
+      $ref: '../model/BasicSubmission.yaml'
     401:
       description: Caused by an invalid X-SESSION-TOKEN
