Pivotal # 183628268: Improve Backend Docs
Include ST urls in API docs

--- a/docs/api/BioStudiesPublicAPI.yaml
+++ b/docs/api/BioStudiesPublicAPI.yaml
@@ -4,6 +4,10 @@ info:
   description: Description of the endpoints that can be used to interact programmatically with the BioStudies database
   version: 1.0.0
 servers:
+  - url: 'https://www.ebi.ac.uk/biostudies/submissions/api'
+    description: ST PROD
+  - url: 'https://wwwdev.ebi.ac.uk/biostudies/submissions/api'
+    description: ST BETA
   - url: 'http://biostudies-prod.ebi.ac.uk:8788'
     description: PROD
   - url: 'http://biostudies-beta.ebi.ac.uk:8788'
