--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,6 +60,7 @@ stages:
   - deploy-beta-handlers
   - deploy-prod-handlers
   - deploy-sandbox-handlers
+  - build-push-docker-image
 
 build-test:
   stage: build-test
@@ -81,3 +82,14 @@ fire-caos-itest:
   script: gradle clean :submission:submission-webapp:itest -PenableFire=true --rerun-tasks --stacktrace
   variables:
     ITEST_FAIL_FACTOR: "8"
+
+build-push-docker-image:
+  needs: [ "build-test" ]
+  stage: build-push-docker-image
+  when: manual
+  script:
+    - cd submission/submission-webapp
+    - mkdir -p build/dependency && cd build/dependency && jar -xf ../libs/submission-webapp-1.0.0.jar && cd .. && cd ..
+    - docker login dockerhub.ebi.ac.uk
+    - docker build -t dockerhub.ebi.ac.uk/jcamilorada/sumitter:$CI_COMMIT_SHA .
+    - docker push dockerhub.ebi.ac.uk/jcamilorada/sumitter:$CI_COMMIT_SHA
