--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,7 +84,7 @@ fire-caos-itest:
     ITEST_FAIL_FACTOR: "8"
 
 build-push-docker-image:
-#  needs: [ "build-test" ]
+  needs: [ "build-test" ]
   stage: build-push-docker-image
   when: manual
   script:
@@ -92,6 +92,6 @@ build-push-docker-image:
     - gradle bootJar
     - mkdir -p build/dependency
     - cd build/dependency && jar -xf ../libs/submission-webapp-1.0.0.jar && cd .. && cd ..
-    - docker login -u miguel -p @miguel2022 dockerhub.ebi.ac.uk
+    - docker login dockerhub.ebi.ac.uk -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD
     - docker build -t dockerhub.ebi.ac.uk/jcamilorada/sumitter:$CI_COMMIT_SHA .
     - docker push dockerhub.ebi.ac.uk/jcamilorada/sumitter:$CI_COMMIT_SHA
